Fix contrast issues

--- a/main.scss
+++ b/main.scss
@@ -1520,7 +1520,7 @@ body{
   /* Bloc constat */
   .bloc-constats{
     h3{
-      color: $text-gray-light;
+      color: $primary;
       text-align: center;
       font-size: $h4-font-size;
       font-weight: 800;
